# librime

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/rime/: setup.cc
tools/: CMakeLists.txt
